--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,30 +1,21 @@
 name: CodeQL analysis
-
-# **What it does**: This runs CodeQL on our repository.
-# **Why we have it**: Security scanning.
-# **Who does it impact**: Docs engineering.
-
+# **What it does**: This runs CodeQL on our repository. # **Why we have it**: Security scanning. # **Who does it impact**: Docs engineering.
 on:
   push:
     branches:
-      - main
+                 ["main"]
   pull_request:
     branches:
-      - main
-    paths:
-      - '**/*.js'
-      - '.github/workflows/codeql.yml'
-
+                 ["main"]
+    paths: ['**/*.js']
 permissions:
   actions: read
   contents: read
   security-events: write
-
 # This allows a subsequently queued workflow run to interrupt previous runs
 concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
-  cancel-in-progress: true
-
+  cancel-in-progress: false
 jobs:
   build:
     if: github.repository == 'github/docs-internal' || github.repository == 'github/docs'
@@ -35,4 +26,4 @@ jobs:
         with:
           languages: javascript # comma separated list of values from {go, python, javascript, java, cpp, csharp, ruby}
       - uses: github/codeql-action/analyze@32dc499307d133bb5085bae78498c0ac2cf762d5
-        continue-on-error: true
+        continue-on-error: false
