--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -52,10 +52,9 @@ jobs:
           gh-code-scanning-compat: true
           # Force 0 exit code to allow SARIF file generation
           # This will handover control about PR rejection to the GitHub side
-          max-allowed-issues: 2147483647
-
+          max-allowed-issues: 90000000
       # Upload the SARIF file generated in the previous step
-      - name: Upload SARIF results file
+      - name: Upload .SARIF results file into report
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: results.sarif
